assets/styles/theme/_uswds-theme-usagov.scss
// ######################
// COLORS FROM STYLEGUIDE
// ######################
//NOTE: Many of the primary/supporting color variables are used for other colors in a redundant manner

// Primary Colors
$dark-blue: #11385b; //NOTE not currently in our code
$aqua-blue: #02bfe7; //highlights action items and key areas (buttons, borders, etc)
$white: #ffffff; //site background, text on dark

// Supporting Colors
$dark-gray: #4b4b4d; //footer primary
$light-gray: #d9d9d9; //footer secondary
$beige: #ebe6de; //leftnav
$red: #c61f0c; //h1, leftnav current item, featurebox h2
$blue: #154285; //standard links, h2, leftnav header
$black: #000000; //standard text, h3

// Other Colors
$h3: $dark-gray;
$button-text: $black;
$aqua-darker: #00a6d2; //hover
$lang-toggle: $dark-blue;
$AZ-button: $blue;
$AZ-button-disabled: #859cba;

.text-success {
  color: color("success-dark");
}

@media print {
  body {
    margin: 0;
    color: #000 !important;
    background-color: #fff;
    font: 10pt Georgia, "Times New Roman", Times, serif;
    line-height: 1;
  }
  .break-inside-avoid {
    page-break-inside: avoid;
    break-inside: avoid;
    display: block;
  }
  .break-before-always-nfc:not(:first-child),
  .break-before-always {
    page-break-before: always;
    break-before: page;
    display: block;
  }
  .print\:text-left {
    text-align: left;
  }
  .print\:display-none {
    display: none;
  }
  .print\:display-inline {
    display: inline;
  }
  .print\:display-block {
    display: block;
  }
  .print\:text-black {
    color: color("black");
  }
  .print\:bg-white {
    @include u-bg("white");
  }
  .print\:text-base-darker {
    color: color("base-darker");
  }
}

.usa-nav__secondary {
  @include at-media($theme-header-min-width) {
    bottom: 6rem;
  }
}

.usa-social-link-a11y > img {
  display: block;
  margin: 0 auto;
  width: 65%;
  transform: translate(0, 25%);
}

.usa-social-link {
  background-color: transparent;
  @include u-border(1px, "solid", "transparent");
  @include u-padding-x(2px);
  @include u-padding-bottom(1px);
  @include u-padding-top(2px);
  width: inherit;
  height: inherit;

  &:hover {
    @include u-border(1px, "solid", "black");
    background-color: transparent;
  }
}

@media (min-width: 64em) {
  .usa-navbar.position-relative > .usa-nav__secondary {
    bottom: 3rem;
  }
}

.usa-footer {
  // more specified styles to align with parent web property usa.gov
  &__primary-section {
    @include u-bg("gray-cool-10");
  }

  &__secondary-section {
    @include u-bg("cyan-10");
  }

  &__primary-link:hover {
    cursor: unset;
    text-decoration: none;
  }

  &__contact-links {
    margin-top: 0;
  }

  &__contact-heading {
    margin-bottom: .5rem;
  }

  #bottom-phone {
    p,
    a {
      font-size: 17.6px;
    }
  }
}

.usa-footer--big .usa-footer__primary-section {
  // more specified styles to align with parent web property usa.gov
  h3 {
    margin-top: 0;
  }

  .usa-list--unstyled {
    padding-bottom: 2rem;
    padding-top: .75rem;
    margin-top: 1rem;
  
    .usa-footer__secondary-link {
      margin-bottom: 0;
    }  
  }
  // this keeps links aligned because title lengths are different
  @include at-media(desktop) {
    #col-2,
    #col-4 {
      > li:first-of-type {
        padding-top: 22.4px;
      }
    }
  }

  .usa-accordion {
    &__content{
      background-color: initial;
    }

    &__button {
      background-color: #efefef;
      font-size: 19.2px;
      padding: 16px 16px 16px 40px;
    }

    &__button[aria-expanded=false],
    &__button[aria-expanded=true] {
      background-image: url("../../assets/img/usa-icons/navigate_next.svg");
      background-position: left 1rem center;
      background-size: 20px;
    }

    &__button[aria-expanded=true] {
      background-image: url("../../assets/img/usa-icons/expand_more.svg");
      text-decoration: underline;
    }
  }
}

.usa-button-group__item,
.usa-search,
.usa-footer {
  .usa-button {
    background-color: color("cyan-30v");
    color: $black;
    border: 1px $black solid;

    &:hover {
      background-color: #00a6d2;
      text-decoration: underline;
    }
  }
}

h1.text-secondary {
  color: #c61f0c;
}

.usa-header--extended .usa-nav {
  border-top: 1px solid #c9c9c9;
  border-bottom: 1px solid #c9c9c9;
}

.usa-nav__primary > .usa-nav__primary-item > a {
  color: #1a4480;
  padding: 0.7rem;
}

.usa-header--extended .usa-nav__primary-item > .usa-current::after,
.usa-header--extended .usa-nav__primary-item > .usa-nav__link:hover::after {
  background-color: #02bfe7;
}

.usa-accordion {
  .usa-tag {
    background-color: color("gray-cool-5");
    color: #1b1b1b;
  }

  .usa-button--outline.usa-button--inverse.usa-button--unstyled {
    background-color: color("gray-cool-5");
    color: #1b1b1b;
  }
}

.usagov-heading--blue {
  color: $blue;
}

// visibility: hidden utility class.
.is-hidden {
  visibility: hidden;
  opacity: opacity(0);
  position: fixed;
}

.usa-gov-footer__primary-link {
  font-size: size("ui", 7);
}

.usa-sign-up__heading {
  @include u-font-family("ui");
}

.usa-sign-up {
  @include u-padding-top(3);
}

.usa-identifier__section {
  text-align: center;
  @include u-padding-bottom(0);
}

.language-link {
  margin-right: 0;
}

.usa-alert--slim {
  border-left: 0;
  @include u-margin-bottom("05");
}

.usa-menu-btn {
  background-color: transparent;
  background-repeat: no-repeat;
  color: #112f4e;
  background-size: 2.8rem;
  background-position: 1px 0;
  padding: 0;
  padding-top: 2rem;
  height: auto;
  font-size: 1rem;
  font-weight: 400;
  cursor: pointer;
  @include u-border(1px, "solid", "white");

  &:hover {
    @include u-border(1px, "solid", "black");
    background-color: transparent;
    color: color("black");
  }

  @include at-media(mobile-lg) {
    margin-right: 6px;
  }
}

.language-switcher-wrap {
  @include u-margin-top(1);
}

.language-switcher-language-url {
  @include at-media-max("desktop") {
    position: absolute;
    right: 30px;
    bottom: 0px;
  }
}

.usa-header {
  position: relative;
}

.usa-logo .logo {
  @include at-media-max("desktop") {
    margin-left: 20px;
  }
}

